--- a/composer.json
+++ b/composer.json
@@ -2,21 +2,25 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.0.2|^8.2",
         "dirape/token": "^2.3",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
-        "laravel/helpers": "^1.5",
-        "laravel/sanctum": "^2.14.1",
+        "guzzlehttp/guzzle": "^7.9.2",
+        "laravel/framework": "^12.0",
+        "laravel/passport": "^12.4",
+        "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.3",
+        "laravel/ui": "^4.0",
+        "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
-        "mcamara/laravel-localization": "^1.7",
-        "rats/zkteco": "^002.0",
-        "santigarcor/laratrust": "^7.1"
+        "mcamara/laravel-localization": "^2.0",
+        "santigarcor/laratrust": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -24,9 +28,9 @@
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^11.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
